--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -405,7 +405,7 @@ body {
     }
 
     .webinar-main--telegram {
-        flex-grow: 1;
+        text-align: center;
     }
 
     .webinar-main-content {
